--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حاسبة التقاعد للمنتقل من الخدمة المدنية الى التأمينات الاجتماعية</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
         body {
@@ -94,6 +93,15 @@
         .developers a:hover {
             text-decoration: underline;
         }
+        .x-icon {
+            display: inline-block;
+            width: 16px;
+            height: 16px;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000000' d='M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z'/%3E%3C/svg%3E");
+            background-size: cover;
+            vertical-align: middle;
+            margin-right: 4px;
+        }
     </style>
 </head>
 <body>
@@ -144,10 +152,10 @@
 
         <div class="developers">
             <p>تم كتابة كافة المعادلات بواسطة ابو احمد 
-                <a href="https://x.com/abu_ahmed4835" target="_blank"><i class="fab fa-twitter"></i> @abu_ahmed4835</a>
+                <a href="https://x.com/abu_ahmed4835" target="_blank"><span class="x-icon"></span>@abu_ahmed4835</a>
             </p>
             <p>تم تصميم الصفحة بواسطة ابو وسيم 
-                <a href="https://x.com/daghriry" target="_blank"><i class="fab fa-twitter"></i> @daghriry</a>
+                <a href="https://x.com/daghriry" target="_blank"><span class="x-icon"></span>@daghriry</a>
             </p>
         </div>
     </div>
